# VoiceSafeKit

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: detector_request.yml
docs/: app.js  demo-data.json  index.html  paper.html  progress.html  styles.css
examples/integrations/: openvoiceos_adapter.py
examples/transcripts/: emotional_distress.txt  identity_theft.txt  medical_question.txt  password_reset.txt  safe_reminder.txt
tests/: test_cli_encryption.py  test_encryption.py  test_engine.py  test_openvoiceos.py
voicesafekit/: __init__.py  __main__.py  cli.py  encryption.py  engine.py  models.py  rules.py
voicesafekit/integrations/: __init__.py  openvoiceos.py
