[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "voicesafekit"
version = "0.2.0"
description = "A privacy and safety checker for local voice assistant transcripts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mohamad Kanso" }]
keywords = [
  "voice-assistant",
  "llm-safety",
  "privacy",
  "local-ai",
  "openvoiceos",
  "wyoming",
  "pii-detection",
  "conversation-safety",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/MohamadKanso/VoiceSafeKit"
Repository = "https://github.com/MohamadKanso/VoiceSafeKit"
Demo = "https://mohamadkanso.github.io/VoiceSafeKit/"

[project.scripts]
voicesafekit = "voicesafekit.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["voicesafekit*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
